# rag-agent

./: .gitignore  Makefile  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: 4af89b279c62_init_tables.py
app/: main.py  worker.py
app/core/: settings.py
app/models/: database.py  engine.py
app/modules/document/: methods.py  router.py  schema.py  tasks.py
app/modules/search/: router.py
app/utils/: chromadb.py  mistral.py  openai.py
