[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.137.0",
    "mistralai>=2.4.9",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
